added two variants with activity and view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AnimationExample</string>
+    <string name="text_for_click">
+        Жамкай на чубрикана чтобы посмотреть на динозавров!!!\n\nНа ключ чтобы открыть новую Activity!!!
+    </string>
 </resources>
